--- a/CaseStudySelenium/.classpath
+++ b/CaseStudySelenium/.classpath
@@ -88,5 +88,6 @@
 	<classpathentry kind="lib" path="C:/selenium java/selenium-support-4.23.1.jar"/>
 	<classpathentry kind="lib" path="C:/selenium java/selenium-support-4.23.1-sources.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/commons-io-2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
